--- a/layouts/partials/header/navbar.html
+++ b/layouts/partials/header/navbar.html
@@ -2,7 +2,7 @@
     <h1><a href="{{ .Site.BaseURL }}">{{.Page.Title}}</a></h1>
     <nav class="navbar" id="lifeinweeks-navbar">
         <div class="p-0">
-            <ul class="nav nav-pills justify-content-between align-items-center">
+            <ul class="nav nav-pills justify-content-between">
                 <li class="nav-item">
                     <a class="nav-link" href="#decade-0">Birth</a>
                 </li>
@@ -36,9 +36,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#decade-100">100</a>
                 </li>
-                <li class="nav-item ms-2">
-                    <button id="theme-toggle" class="nav-link" type="button" aria-label="Toggle dark mode">Dark</button>
-                </li>
+                
             </ul>
         </div>
     </nav>
